[package]
name = "link-me"
version = "0.1.0"
authors = ["Neil Ashford <me@neilashford.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
git-url-parse = "0.3.1"
git2 = "0.13.17"
structopt = "0.3.21"